Tweak table spacing to prevent overcrowding

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,8 +120,8 @@ table {
   width: 100%;
 }
 
-table th, table td {
-  padding: 1vh 0px;
+table td {
+  padding: 1vh 5px;
 }
 
 table th {
